Adjustments to the navbar and sidebar

--- a/upload_record.html
+++ b/upload_record.html
@@ -183,11 +183,11 @@
             <!-- Header END -->
 
             <!-- Side Nav START -->
-            <div class="side-nav">
+             <div class="side-nav">
                 <div class="side-nav-inner">
                     <ul class="side-nav-menu scrollable">
                         <li class="nav-item">
-                            <a class="active" href="./dashboard.html">
+                            <a href="./dashboard.html">
                                 <span class="icon-holder">
                                     <i class="anticon anticon-dashboard"></i>
                                 </span>
@@ -205,7 +205,7 @@
                                 </span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li>
+                                <li >
                                     <a href="users.html">Users</a>
                                 </li>
                                 <li class="active">
@@ -218,7 +218,7 @@
                                 <span class="icon-holder">
                                     <i class="anticon anticon-file"></i>
                                 </span>
-                                <span class="title">Pages</span>
+                                <span class="title">Settings</span>
                                 <span class="arrow">
                                     <i class="arrow-icon"></i>
                                 </span>
@@ -227,21 +227,30 @@
                                 <li>
                                     <a href="profile.html">Profile</a>
                                 </li>
+                                <li >
+                                    <a href="settings.html">Setting</a>
+                                </li>
+                            </ul>
+                        </li> 
+                        <li class="nav-item dropdown">
+                            <a class="dropdown-toggle" href="javascript:void(0);">
+                                <span class="icon-holder">
+                                    <i class="anticon anticon-file"></i>
+                                </span>
+                                <span class="title">Roles</span>
+                                <span class="arrow">
+                                    <i class="arrow-icon"></i>
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu">
                                 <li>
-                                    <a href="invoice.html">Invoice</a>
+                                    <a href="profile.html">Create Roles</a>
                                 </li>
                                 <li>
-                                    <a href="members.html">Members</a>
-                                </li>
-                                <li>
-                                    <a href="pricing.html">Pricing</a>
-                                </li>
-                                <li>
-                                    <a href="setting.html">Setting</a>
+                                    <a href="invoice.html">Roles</a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
                     </ul>
                 </div>
             </div>
