--- a/dashboard.html
+++ b/dashboard.html
@@ -50,14 +50,14 @@
                         <li class="dropdown dropdown-animated scale-left">
                             <div class="pointer" data-toggle="dropdown">
                                 <div class="avatar avatar-image  m-h-10 m-r-15">
-                                    <img src="assets/images/avatars/thumb-3.jpg"  alt="">
+                                     <img src="assets/images/icon.png"  alt="">
                                 </div>
                             </div>
                             <div class="p-b-15 p-t-20 dropdown-menu pop-profile">
                                 <div class="p-h-20 p-b-15 m-b-10 border-bottom">
                                     <div class="d-flex m-r-50">
                                         <div class="avatar avatar-lg avatar-image">
-                                            <img src="assets/images/avatars/thumb-3.jpg" alt="">
+                                             <img src="assets/images/icon.png"  alt="">
                                         </div>
                                         <div class="m-l-10">
                                             <p class="m-b-0 text-dark font-weight-semibold">Marshall Nichols</p>
@@ -93,11 +93,6 @@
                                 </a>
                             </div>
                         </li>
-                        <li>
-                            <a href="javascript:void(0);" data-toggle="modal" data-target="#quick-view">
-                                <i class="anticon anticon-appstore"></i>
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </div>    
@@ -124,6 +119,9 @@
                                 </span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li >
+                                    <a href="create_user.html">Create Users</a>
+                                </li>
                                 <li >
                                     <a href="users.html">Users</a>
                                 </li>
