--- a/create_user.html
+++ b/create_user.html
@@ -213,7 +213,7 @@
                                                 </div>
                                                  <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="gender">Gender <span class="required-fields">*</span></label>
-                                                    <select id="gender" class="form-control" required>
+                                                    <select id="gender" class="custom-select" required>
                                                         <option value="Male">Male</option>
                                                         <option value="Female">Female</option>
                                                         <option value="Other">Others</option>
@@ -223,7 +223,7 @@
                                             <div class="form-row">
                                                 <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="project">Proposed Project <span class="required-fields">*</span></label>
-                                                    <select id="project" class="form-control">
+                                                    <select id="project" class="custom-select">
                                                         <option>Select Project</option>
                                                         <option>House</option>
                                                         <option>Car</option>
@@ -232,7 +232,7 @@
                                                 </div>
                                                 <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="state">State <span class="required-fields">*</span></label>
-                                                    <select id="state" class="form-control" required>
+                                                    <select id="state" class="custom-select" required>
                                                         <option>FCT</option>
                                                         <option>Lagos</option>
                                                         <option>Kano</option>
@@ -240,7 +240,7 @@
                                                 </div>
                                                 <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="lga">LGA </label>
-                                                    <select id="lga" class="form-control">
+                                                    <select id="lga" class="custom-select">
                                                         <option>Bwari</option>
                                                         <option>Municipal</option>
                                                         <option>Gwagwalada</option>
