--- a/edit-user.html
+++ b/edit-user.html
@@ -187,32 +187,33 @@
                                         <h4 class="card-title">Basic Infomation</h4>
                                     </div>
                                     <div class="card-body">
+                                        <form>
                                             <div class="form-row">
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="firstName">First Name:</label>
-                                                    <input type="text" class="form-control" id="firstName" placeholder="First Name" value="Monkey" disabled="">
+                                                    <label class="font-weight-semibold" for="firstName">First Name: <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="firstName" placeholder="First Name" value="Monkey" required>
                                                 </div>
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="lastName">Last Name: </label>
-                                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" value="D" disabled="">
+                                                    <label class="font-weight-semibold" for="lastName">Last Name: <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="lastName" placeholder="Last Name" value="D" required>
                                                 </div>
                                                 <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="middleName">Middle Name:</label>
-                                                    <input type="text" class="form-control" id="middleName" placeholder="Middle Name" value="Luffy" disabled="">
+                                                    <input type="text" class="form-control" id="middleName" placeholder="Middle Name" value="Luffy" required>
                                                 </div>
                                             </div>
                                             <div class="form-row">
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="phoneNumber">Phone Number: </label>
-                                                    <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" disabled="">
+                                                    <label class="font-weight-semibold" for="phoneNumber">Phone Number: <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" required>
                                                 </div>
                                                  <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="email">Email:</label>
-                                                    <input type="email" class="form-control" id="email" placeholder="email" value="@marshallnich" disabled="">
+                                                    <input type="email" class="form-control" id="email" placeholder="email" value="@marshallnich">
                                                 </div>
                                                  <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="gender">Gender </label>
-                                                    <select id="gender" class="custom-select" disabled="">
+                                                    <label class="font-weight-semibold" for="gender">Gender <span class="required-fields">*</span></label>
+                                                    <select id="gender" class="custom-select" required>
                                                         <option value="Male">Male</option>
                                                         <option value="Female">Female</option>
                                                         <option value="Other">Others</option>
@@ -221,17 +222,17 @@
                                             </div>
                                             <div class="form-row">
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="project">Proposed Project </label>
-                                                    <select id="project" class="custom-select" disabled="">
+                                                    <label class="font-weight-semibold" for="project">Proposed Project <span class="required-fields">*</span></label>
+                                                    <select id="project" class="custom-select">
                                                         <option>Select Project</option>
-                                                        <option selected>House</option>
+                                                        <option>House</option>
                                                         <option>Car</option>
                                                         <option>Door</option>
                                                     </select>
                                                 </div>
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="state">State </label>
-                                                    <select id="state" class="custom-select" disabled="">
+                                                    <label class="font-weight-semibold" for="state">State <span class="required-fields">*</span></label>
+                                                    <select id="state" class="custom-select" required>
                                                         <option>FCT</option>
                                                         <option>Lagos</option>
                                                         <option>Kano</option>
@@ -239,7 +240,7 @@
                                                 </div>
                                                 <div class="form-group col-md-4">
                                                     <label class="font-weight-semibold" for="lga">LGA </label>
-                                                    <select id="lga" class="custom-select" disabled="">
+                                                    <select id="lga" class="custom-select">
                                                         <option>Bwari</option>
                                                         <option>Municipal</option>
                                                         <option>Gwagwalada</option>
@@ -255,32 +256,36 @@
                                     <div class="card-body">
                                             <div class="form-row">
                                                 <div class="form-group col-md-6">
-                                                    <label class="font-weight-semibold" for="accountName">Account Name: </label>
-                                                    <input type="text" class="form-control" id="accountName" name="accountName" placeholder="Account Name"  disabled>
+                                                    <label class="font-weight-semibold" for="accountName">Account Name: <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="accountName" name="accountName" placeholder="Account Name" required>
                                                 </div>
                                                 <div class="form-group col-md-6">
-                                                    <label class="font-weight-semibold" for="accountNo">Account No </label>
-                                                    <input type="text" class="form-control" id="accountNo" name="accountNo" placeholder="Account Number" disabled>
+                                                    <label class="font-weight-semibold" for="accountNo">Account No <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="accountNo" name="accountNo" placeholder="Account Number">
                                                 </div>
                                             </div>
                                             <div class="form-row">
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="bankName">Bank Name: </label>
-                                                    <input type="text" class="form-control" id="bankName" placeholder="Bank Name"  disabled>
+                                                    <label class="font-weight-semibold" for="bankName">Bank Name: <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="bankName" placeholder="Bank Name" required>
                                                 </div>
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="accountType">Account Type </label>
-                                                    <select id="accountType" class="custom-select"  disabled>
+                                                    <label class="font-weight-semibold" for="accountType">Account Type <span class="required-fields">*</span></label>
+                                                    <select id="accountType" class="custom-select" required>
                                                         <option>Select Account Type</option>
                                                         <option>Credit Account</option>
                                                         <option>Debit Account</option>
                                                     </select>
                                                 </div>
                                                 <div class="form-group col-md-4">
-                                                    <label class="font-weight-semibold" for="branch">Branch:</label>
-                                                    <input type="text" class="form-control" id="branch" placeholder="Branch (optional)" disabled>
+                                                    <label class="font-weight-semibold" for="branch">Branch: <span class="required-fields">*</span></label>
+                                                    <input type="text" class="form-control" id="branch" placeholder="Branch (optional)">
                                                 </div>
                                             </div>
+
+                                            <hr class="m-v-25">
+                                            <button class="btn btn-primary m-t-10 float-right">Create User</button>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
